fix: aspect ratio on mobile again

--- a/style.css
+++ b/style.css
@@ -539,8 +539,6 @@ nav {
 
 .project {
   margin-bottom: 80px;
-  aspect-ratio: auto;
-  height: auto;
 }
 
 .project__wrapper {
@@ -576,7 +574,6 @@ nav {
 
 .project__image {
   width: 100%;
-  height: fit-content;
   transition: all 300ms ease;
 }
 
